Update style.css esercizio3

--- a/style.css
+++ b/style.css
@@ -1,50 +1,44 @@
-body {
-  color: lightslategray;
+table {
+  border: 1px #263238;
+  width: 50%;
+  margin-top: 20px;
 }
 
-blockquote {
-  background-color: rgba(0, 12, 24, 0.05);
-}
-
-a {
-  border: 1px dashed red;
-}
-
-em {
-  color: darkred;
-}
-
-.variant-em {
-  background-color: greenyellow;
-  color: black;
+table caption {
+  color: #263238;
+  font-size: 18px;
   font-weight: bold;
-  font-style: inherit;
+  margin-bottom: 10px;
 }
 
-ul {
-  background-color: unset;
+th {
+  background-color: #455a64;
+  color: white;
+  font-weight: 700;
 }
 
-ul li {
-  padding: 16px;
+tr:nth-child(even) {
+  background-color: #eceff1;
 }
 
-.link1 a {
-  color: inherit;
-  padding: inherit;
+tr:nth-child(odd) {
+  background-color: #b0bec5;
 }
 
-.link2 a {
-  color: initial;
-  padding: 5px;
+tfoot td {
+  background-color: #78909c;
+  font-weight: 800;
 }
 
-.link3 a {
-  color: unset;
-  padding: 0;
+td:nth-child(2) {
+  color: #003300;
 }
 
-.content1 {
-  border: 1px solid black;
-  padding: 10px;
+td:nth-child(3) {
+  color: #7f0000;
+}
+
+td:nth-child(2),
+td:nth-child(3) {
+  text-align: right;
 }
