--- a/style.css
+++ b/style.css
@@ -1,35 +1,34 @@
-blockquote {
-  background-color: rgba(0, 0, 0, 0.12);
+table {
+  border-collapse: collapse;
+}
+
+th,
+td {
+  border: 1px solid black;
   padding: 8px;
-  quotes: "“";
 }
 
-blockquote::after {
-  content: close-quote;
+h1 {
+  color: orange;
+  text-align: center;
+  font-size: large;
 }
 
-blockquote::before {
-  content: open-quote;
+p {
+  font-size: medium;
+  text-align: justify;
+  padding: 5px;
 }
 
-a {
-  color: red;
-  text-decoration: none;
+#p2 {
+  font-weight: bold;
+  text-align: left;
 }
 
 a:hover {
-  color: blue;
+  color: red;
 }
 
 a:visited {
   color: green;
-}
-
-.first::first-letter {
-  float: left;
-  color: darkred;
-  border: 3px ridge darkgoldenrod;
-  padding: 16px;
-  background-color: gold;
-  margin: 8px;
 }
