--- a/style.css
+++ b/style.css
@@ -1,34 +1,87 @@
-table {
-  border-collapse: collapse;
+.navbar {
+  background-color: #333;
+  overflow: hidden;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
 }
 
-th,
-td {
-  border: 1px solid black;
-  padding: 8px;
-}
-
-h1 {
-  color: orange;
+.navbar a {
+  float: left;
+  display: flex;
+  color: white;
   text-align: center;
-  font-size: large;
+  padding: 14px 20px;
+  text-decoration: none;
 }
 
-p {
-  font-size: medium;
-  text-align: justify;
-  padding: 5px;
+.navbar a:hover {
+  background-color: #ddd;
+  color: black;
 }
 
-#p2 {
-  font-weight: bold;
+.search-container {
+  margin-left: auto;
+}
+
+input[type="text"] {
+  padding: 6px 10px;
+  margin-top: 8px;
+  margin-left: auto;
+  font-size: 17px;
+  border: none;
+}
+
+button {
+  float: right;
+  padding: 6px 10px;
+  margin-top: 8px;
+  background: #333;
+  font-size: 17px;
+  border-style: none;
+  border-style: ridge;
+  border-color: green;
+  color: green;
+  cursor: pointer;
+}
+.dropdown {
+  float: left;
+  overflow: hidden;
+}
+
+.dropdown .dropbtn {
+  font-size: 16px;
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
   text-align: left;
 }
 
-a:hover {
-  color: red;
+.dropdown-content a:hover {
+  background-color: #ddd;
 }
 
-a:visited {
-  color: green;
+.dropdown:hover .dropdown-content {
+  display: block;
 }
