--- a/style.css
+++ b/style.css
@@ -1,50 +1,41 @@
 body {
-  color: lightslategray;
+  width: 60em;
+  margin: 0 auto;
+  display: flex;
 }
 
-blockquote {
-  background-color: rgba(0, 12, 24, 0.05);
+section {
+  padding: 2em;
+  margin: 1em;
 }
 
-a {
-  border: 1px dashed red;
+#green {
+  background-color: #8ffda7;
 }
 
-em {
-  color: darkred;
+#orange {
+  background-color: #ffc788;
 }
 
-.variant-em {
-  background-color: greenyellow;
-  color: black;
-  font-weight: bold;
-  font-style: inherit;
+#yellow {
+  background-color: #ffff92;
+}
+
+#red {
+  background-color: #ff919c;
+}
+
+#blue {
+  background-color: #98d2ff;
 }
 
 ul {
-  background-color: unset;
-}
-
-ul li {
-  padding: 16px;
-}
-
-.link1 a {
-  color: inherit;
-  padding: inherit;
-}
-
-.link2 a {
-  color: initial;
-  padding: 5px;
-}
-
-.link3 a {
-  color: unset;
   padding: 0;
 }
 
-.content1 {
-  border: 1px solid black;
-  padding: 10px;
+li {
+  background-color: white;
+  padding: 1em;
+  display: block;
+  margin: 1em;
 }
