--- a/start.css
+++ b/start.css
@@ -1,38 +1,42 @@
 body {
-  flex-flow: row;
-  justify-content: center;
-}
-
-#yellow {
-  order: 1;
-  flex: 1 20%;
-}
-
-#red {
-  order: 2;
-  flex: 1 20%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
 }
 
 #green {
-  order: 3;
-  flex: 1 10%;
+  grid-column: 1 / 4;
+  grid-row: 1;
 }
 
 #orange {
-  order: 4;
-  flex: 2 40%;
+  grid-column: 1 / 3;
+  grid-row: 3;
+}
+
+#yellow {
+  grid-column: 1;
+  grid-row: 2;
+}
+
+#red {
+  grid-column: 2;
+  grid-row: 2;
 }
 
 #blue {
-  order: 5;
-  flex: 1 10%;
+  grid-column: 3;
+  grid-row: 2 / 4;
 }
 
 ul {
-  display: flex;
-  flex-flow: column;
-  flex-wrap: wrap;
-  align-content: center;
-  justify-content: center;
-  min-width: auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto auto;
+}
+
+li {
+  background-color: white;
+  padding: 1em;
+  margin: 1em;
 }
