--- a/style.css
+++ b/style.css
@@ -1,40 +1,106 @@
-body {
-  width: 60em;
-  margin: 0 auto;
+.navbar {
+  background-color: #333;
+  overflow: hidden;
+  justify-content: flex-start;
+  align-items: center;
 }
 
-section {
-  padding: 2em;
-  margin: 1em;
+.navbar a {
+  float: left;
+  display: flex;
+  color: white;
+  text-align: center;
+  padding: 14px 20px;
+  text-decoration: none;
 }
 
-#green {
-  background-color: #8ffda7;
+.navbar a:hover {
+  background-color: #ddd;
+  color: black;
 }
 
-#orange {
-  background-color: #ffc788;
+.search-container {
+  margin-left: auto;
 }
 
-#yellow {
-  background-color: #ffff92;
+input[type="text"] {
+  padding: 6px 10px;
+  margin-top: 8px;
+  margin-left: auto;
+  font-size: 17px;
+  border: none;
 }
 
-#red {
-  background-color: #ff919c;
+button {
+  float: right;
+  padding: 6px 10px;
+  margin-top: 8px;
+  background: #333;
+  font-size: 17px;
+  border-style: none;
+  border-style: ridge;
+  border-color: green;
+  color: green;
+  cursor: pointer;
+}
+.dropdown {
+  float: left;
+  overflow: hidden;
 }
 
-#blue {
-  background-color: #98d2ff;
+.dropdown .dropbtn {
+  font-size: 16px;
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
 }
 
-ul {
-  padding: 0;
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
 }
 
-li {
-  background-color: white;
-  padding: 1em;
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
   display: block;
-  margin: 1em;
+  text-align: left;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+.hamburger {
+  display: none;
+}
+
+.hamburger span {
+  background-color: #fff;
+  width: 30px;
+  height: 3px;
+  margin-bottom: 5px;
+  display: block;
+}
+
+@media (max-width: 768px) {
+  .links {
+    display: none;
+  }
+  .hamburger {
+    display: block;
+  }
 }
