--- a/style.css
+++ b/style.css
@@ -1,106 +1,40 @@
-.navbar {
-  background-color: #333;
-  overflow: hidden;
-  justify-content: flex-start;
-  align-items: center;
-}
-
-.navbar a {
-  float: left;
+.container {
   display: flex;
-  color: white;
-  text-align: center;
-  padding: 14px 20px;
-  text-decoration: none;
+  justify-content: space-around;
+  flex-wrap: wrap;
 }
 
-.navbar a:hover {
-  background-color: #ddd;
-  color: black;
+.card {
+  width: 30%;
+  margin: 10px;
+  padding: 5px;
+  border: 1px solid #ccc;
+  border-radius: 15px;
 }
 
-.search-container {
-  margin-left: auto;
+.card img {
+  width: 100%;
+  height: auto;
 }
 
-input[type="text"] {
-  padding: 6px 10px;
-  margin-top: 8px;
-  margin-left: auto;
-  font-size: 17px;
-  border: none;
+h5 {
+  color: grey;
 }
 
-button {
-  float: right;
-  padding: 6px 10px;
-  margin-top: 8px;
-  background: #333;
-  font-size: 17px;
-  border-style: none;
-  border-style: ridge;
-  border-color: green;
-  color: green;
-  cursor: pointer;
-}
-.dropdown {
-  float: left;
-  overflow: hidden;
-}
-
-.dropdown .dropbtn {
-  font-size: 16px;
-  border: none;
-  outline: none;
-  color: white;
-  padding: 14px 16px;
-  background-color: inherit;
-  font-family: inherit;
-  margin: 0;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
-}
-
-.dropdown-content a {
-  float: none;
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-
-.dropdown-content a:hover {
-  background-color: #ddd;
-}
-
-.dropdown:hover .dropdown-content {
-  display: block;
-}
-.hamburger {
-  display: none;
-}
-
-.hamburger span {
-  background-color: #fff;
-  width: 30px;
-  height: 3px;
-  margin-bottom: 5px;
-  display: block;
-}
-
-@media (max-width: 768px) {
-  .links {
-    display: none;
+@media (max-width: 375px) {
+  .container {
+    flex-direction: column;
   }
-  .hamburger {
-    display: block;
+}
+
+@media (min-width: 375px) and (max-width: 768px) {
+  .card {
+    display: grid;
+  }
+}
+
+@media (min-width: 769px) {
+  .container {
+    flex-direction: row;
   }
 }
